# wms-test

./: .gitignore  AI_USAGE_GUIDE.md  NOTES.md  README.md  TASKS.md
backend-java/: pom.xml
backend-java/src/main/java/com/wms/common/: ApiResponse.java  BusinessException.java  GlobalExceptionHandler.java  PageResult.java
backend-java/src/main/java/com/wms/config/: DataInitializer.java
backend-java/src/main/java/com/wms/controller/: InventoryController.java  ProductController.java  WarehouseController.java
backend-java/src/main/java/com/wms/dto/: InboundItemRequest.java  InboundItemResponse.java  InboundOrderCreateRequest.java  InboundOrderResponse.java  InventoryResponse.java  ProductCreateRequest.java  (+2 more)
backend-java/src/main/resources/: application.yml
backend-java/src/test/resources/: application.yml
backend-python/: init_data.py  pyproject.toml
backend-python/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend-python/app/routers/: inventory.py  products.py  warehouses.py
docs/: API_SPEC.md
frontend-react/: index.html  package-lock.json  package.json  tsconfig.json
frontend-react/src/: App.tsx  main.tsx  router.tsx
frontend-react/src/api/: client.ts  index.ts
frontend-react/src/pages/: InboundPage.tsx  InventoryPage.tsx  ProductsPage.tsx
frontend-vue/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-vue/src/: App.vue
frontend-vue/src/api/: client.ts  index.ts
frontend-vue/src/router/: index.ts
frontend-vue/src/views/: InboundView.vue  InventoryView.vue  ProductsView.vue
(+14 files in other folders)
